@@ -1,3 +1,7 @@
+dht-0.26 (unreleased):
+
+  * Rename dht_callback to dht_callback_t.  This is an incompatible change.
+
 9 February 2018: dht-0.25
 
   * Made the sendto function used by the library customisable.  This is an
